fixed overflow

--- a/src/components/MovieCard.module.css
+++ b/src/components/MovieCard.module.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 .movieCard:hover {
   scale: 1.2;
@@ -27,7 +26,7 @@ AiFillStar {
 .movieName {
   font-family: poppins;
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 400;
   padding-top: 0.5rem;
   width: 60%;
 }
