--- a/src/components/PopularMovies.module.css
+++ b/src/components/PopularMovies.module.css
@@ -8,6 +8,8 @@
 }
 .popularMovieTitle {
   margin-left: 1rem;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
 }
 .loadMore {
   padding: 0.8rem 1rem;
